--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>clever-scribe-academy</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>NoteMind</title>
+    <meta name="description" content="This project is to help students organize their note and get ai summary on topics or subjects" />
+    <meta name="author" content="Codex" />
 
-    <meta property="og:title" content="clever-scribe-academy" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="NoteMind" />
+    <meta property="og:description" content="This project is to help students organize their note and get ai summary on topics or subjects" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
