--- a/index.html
+++ b/index.html
@@ -1,24 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NoteMind</title>
-    <meta name="description" content="This project is to help students organize their note and get ai summary on topics or subjects" />
-    <meta name="author" content="Codex" />
 
-    <meta property="og:title" content="NoteMind" />
-    <meta property="og:description" content="This project is to help students organize their note and get ai summary on topics or subjects" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NoteMind</title>
+  <meta name="description"
+    content="This project is to help students organize their note and get ai summary on topics or subjects" />
+  <meta name="author" content="Codex" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="NoteMind" />
+  <meta property="og:description"
+    content="This project is to help students organize their note and get ai summary on topics or subjects" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="public/favicon.ico" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@lovable_dev" />
+  <meta name="twitter:image" content="public/favicon.ico" />
+
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="android-chrome-icon" href="/android-chrome-192x192.png" />
+  <link rel="android-chrome-icon" sizes="512x512" href="/android-chrome-512x512.png" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="mask-icon" href="/plasholder.svg" color="#5bbad5" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
