feat: Enhance audio processing and AI summary display
- **Database:** Added `document_id` to `audio_processing_results` table for linking audio processing jobs to generated documents.
- **Edge Function (`process-audio`):** Updated to accept and store `document_id` during initial record creation and to correctly handle `user_id` for RLS.
- **Note Editor (`NoteEditor.tsx`):**
    - Modified audio processing flow to create a `document` entry for audio files and pass its `id` to the Edge Function.
    - Ensured the note's `document_id` is updated with the processed audio's document ID.
    - Reworked AI summary section layout for responsiveness: now displays on the side in desktop view and as a slide-up panel in mobile view.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <link rel="manifest" href="/manifest.json" />
   <link rel="mask-icon" href="/plasholder.svg" color="#5bbad5" />
   <meta name="msapplication-TileColor" content="#da532c" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.3/html2pdf.bundle.min.js"></script>
 </head>
 
 <body>
