--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
   <link rel="mask-icon" href="/plasholder.svg" color="#5bbad5" />
   <meta name="msapplication-TileColor" content="#da532c" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.3/html2pdf.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/viz.umd.min.js"></script>
+
 </head>
 
 <body>
