--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/viz.umd.min.js"></script>
+  <meta name="google-site-verification" content="yoHRV1-7y0h-CmKh1bwUxofnNQf_sNrAIE0suuxbT1U" />
 
 </head>
 
