--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/viz.umd.min.js"></script>
   <meta name="google-site-verification" content="yoHRV1-7y0h-CmKh1bwUxofnNQf_sNrAIE0suuxbT1U" />
-  
+  <meta name="google-site-verification" content="LqlZPAcrFUznTvkViW3xx7dNSD0XfAhhqE0hNNWy_jY" />
   <!-- Added meta robots tag for indexing and following links -->
   <meta name="robots" content="index, follow" /> 
 
