fixed overflow issues

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
   <meta name="google-site-verification" content="LqlZPAcrFUznTvkViW3xx7dNSD0XfAhhqE0hNNWy_jY" />
   <!-- Added meta robots tag for indexing and following links -->
   <meta name="robots" content="index, follow" /> 
+  <style>
+    body {
+      overflow-y: hidden;
+    }
+  </style>
 
 </head>
 
