--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
   <meta name="google-site-verification" content="yoHRV1-7y0h-CmKh1bwUxofnNQf_sNrAIE0suuxbT1U" />
   <meta name="google-site-verification" content="LqlZPAcrFUznTvkViW3xx7dNSD0XfAhhqE0hNNWy_jY" />
   <!-- Added meta robots tag for indexing and following links -->
-  <meta name="robots" content="index, follow" /> 
-  
+  <meta name="robots" content="index, follow" />
+  <style>
+    #lovable-badge {
+      display: none !important;
+      /* !important ensures it overrides other styles */
+    }
+  </style>
 
 </head>
 
