change the app name to studdyhub

--- a/index.html
+++ b/index.html
@@ -4,41 +4,77 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>NoteMind</title>
+  <title>StuddyHub - AI-Powered Note Organization for Students</title>
   <meta name="description"
-    content="This project is to help students organize their note and get ai summary on topics or subjects" />
-  <meta name="author" content="Codex" />
+    content="StuddyHub helps students organize their notes and get AI-powered summaries on topics and subjects. Transform your study experience with intelligent note management." />
+  <meta name="author" content="StuddyHub Team" />
+  <meta name="keywords" content="notes, AI summary, student organization, study tools, note management, educational technology" />
 
-  <meta property="og:title" content="NoteMind" />
-  <meta property="og:description"
-    content="This project is to help students organize their note and get ai summary on topics or subjects" />
+  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="public/favicon.ico" />
+  <meta property="og:url" content="https://studdyhub.vercel.app/" />
+  <meta property="og:title" content="StuddyHub - AI-Powered Note Organization for Students" />
+  <meta property="og:description"
+    content="StuddyHub helps students organize their notes and get AI-powered summaries on topics and subjects. Transform your study experience with intelligent note management." />
+  <meta property="og:image" content="https://studdyhub.vercel.app/og-image.png" />
+  <meta property="og:site_name" content="StuddyHub" />
 
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@lovable_dev" />
-  <meta name="twitter:image" content="public/favicon.ico" />
+  <meta name="twitter:url" content="https://studdyhub.vercel.app/" />
+  <meta name="twitter:title" content="StuddyHub - AI-Powered Note Organization for Students" />
+  <meta name="twitter:description"
+    content="StuddyHub helps students organize their notes and get AI-powered summaries on topics and subjects." />
+  <meta name="twitter:image" content="https://studdyhub.vercel.app/twitter-image.png" />
 
+  <!-- Favicons -->
   <link rel="icon" href="/favicon.ico" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-  <link rel="android-chrome-icon" href="/android-chrome-192x192.png" />
-  <link rel="android-chrome-icon" sizes="512x512" href="/android-chrome-512x512.png" />
-  <link rel="shortcut icon" href="/favicon.ico" />
-
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="android-chrome-icon" sizes="192x192" href="/android-chrome-192x192.png" />
+  <link rel="android-chrome-icon" sizes="512x512" href="/android-chrome-512x512.png" />
   <link rel="manifest" href="/manifest.json" />
-  <link rel="mask-icon" href="/plasholder.svg" color="#5bbad5" />
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
   <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <!-- External Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.3/html2pdf.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/viz.umd.min.js"></script>
+
+  <!-- Google Search Console Verification -->
   <meta name="google-site-verification" content="yoHRV1-7y0h-CmKh1bwUxofnNQf_sNrAIE0suuxbT1U" />
   <meta name="google-site-verification" content="LqlZPAcrFUznTvkViW3xx7dNSD0XfAhhqE0hNNWy_jY" />
-  <!-- Added meta robots tag for indexing and following links -->
-  <meta name="robots" content="index, follow" />
 
+  <!-- SEO Meta Tags -->
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+  <meta name="googlebot" content="index, follow" />
+  <link rel="canonical" href="https://studdyhub.vercel.app/" />
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "StuddyHub",
+    "url": "https://studdyhub.vercel.app",
+    "description": "AI-powered note organization platform for students",
+    "applicationCategory": "EducationalApplication",
+    "operatingSystem": "Web Browser",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "creator": {
+      "@type": "Organization",
+      "name": "StuddyHub Team"
+    }
+  }
+  </script>
 </head>
 
 <body>
