added the group chat  p2p chat

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       "Document management",
       "Schedule planning",
       "Voice recordings"
+      "AI Chatbot assistance"
     ],
     "offers": {
       "@type": "Offer",
