fix console errors

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="description"
     content="StuddyHub helps students organize notes, share knowledge, and collaborate with AI-powered social learning. Transform your study experience with intelligent note management and social features." />
   <meta name="author" content="StuddyHub Team" />
-  <meta name="keywords" content="notes, AI summary, student organization, study tools, note management, educational technology, social learning, student collaboration, study groups" />
+  <meta name="keywords"
+    content="notes, AI summary, student organization, study tools, note management, educational technology, social learning, student collaboration, study groups" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
@@ -60,7 +61,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <meta name="mobile-web-app-capable" content="yes" />
-  
+
   <!-- Structured Data -->
   <script type="application/ld+json">
   {
@@ -77,7 +78,7 @@
       "Study group collaboration",
       "Document management",
       "Schedule planning",
-      "Voice recordings"
+      "Voice recordings",
       "AI Chatbot assistance"
     ],
     "offers": {
