Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>StuddyHub - AI-Powered Social Learning Platform for Students</title>
   <meta name="description"
     content="StuddyHub helps students organize notes, share knowledge, and collaborate with AI-powered social learning. Transform your study experience with intelligent note management and social features." />
